--- a/TEMPERATURE CONVERTOR/style.css
+++ b/TEMPERATURE CONVERTOR/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     text-align: center;
     background-color: ghostwhite;
 
@@ -9,13 +9,19 @@ body {
     width: 50%;
     text-align: center;
     font-size: 2em;
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 15px;
-    background-color: mediumorchid;
+    background-color: rgb(252, 246, 253);
 }
 button{
-    background-color: blue;
+    background-color: rgb(50, 50, 253);
+    border: none;
     border-radius: 4px;
     margin-top: 10px;
+    padding: 10px 20px;
+    color: white;
+}
+button:hover{
+    cursor: pointer;
+    background: rgb(105, 105, 247);
 }
